# userver

./: .mapping.json  CMakeLists.txt  CONTRIBUTING.md  README.md  conanfile.py
chaotic/: CMakeLists.txt
chaotic-openapi/: CMakeLists.txt
chaotic-openapi/chaotic_openapi/: main.py
chaotic-openapi/chaotic_openapi/back/cpp_client/: renderer.py  types.py
chaotic-openapi/chaotic_openapi/back/cpp_client/templates/: client.cpp.jinja  client.hpp.jinja  client_fwd.hpp.jinja  client_impl.cpp.jinja  client_impl.hpp.jinja  component.cpp.jinja  component.hpp.jinja  exceptions.hpp.jinja  requests.cpp.jinja  requests.hpp.jinja  responses.cpp.jinja  responses.hpp.jinja
chaotic-openapi/golden_tests/: CMakeLists.txt
chaotic-openapi/golden_tests/schemas/test/: openapi.yaml
chaotic-openapi/include/userver/chaotic/openapi/: parameters.hpp  parameters_read.hpp  parameters_write.hpp
chaotic-openapi/src/chaotic/openapi/: parameters.cpp  parameters_read.cpp  parameters_read_test.cpp  parameters_write.cpp
chaotic-openapi/src/chaotic/openapi/client/: command_control.cpp  config.cpp
chaotic/chaotic/: cpp_format.py  cpp_names.py  error.py  jinja_env.py  main.py
chaotic/chaotic/back/cpp/: renderer.py  translator.py  type_name.py  types.py
chaotic/chaotic/compilers/: dynamic_config.py
chaotic/chaotic/front/: parser.py  ref_resolver.py  types.py
chaotic/golden_tests/: CMakeLists.txt
chaotic/include/userver/chaotic/openapi/: parameters.hpp  parameters_read.hpp  parameters_write.hpp
chaotic/integration_tests/: CMakeLists.txt
chaotic/integration_tests/tests/render/: simple.cpp
chaotic/src/chaotic/openapi/: parameters_read_test.cpp  parameters_write.cpp  parameters_write_test.cpp
chaotic/tests/: conftest.py
chaotic/tests/back/cpp/: test_external.py  test_tr_array.py  test_tr_int.py  test_tr_object.py  test_tr_ref.py  test_types.py
chaotic/tests/compilers/: test_dynamic_configs.py
chaotic/tests/front/: test_basic.py  test_number.py  test_object.py  test_one_of.py  test_ref.py
core/functional_tests/graceful_shutdown/: CMakeLists.txt  main.cpp  static_config.yaml
core/functional_tests/graceful_shutdown/src/: handler_sigterm.hpp
core/functional_tests/graceful_shutdown/tests/: conftest.py  test_graceful_shutdown.py
kafka/: CMakeLists.txt
kafka/functional_tests/: CMakeLists.txt
kafka/functional_tests/balanced_consumer_groups/: static_config.yaml
kafka/functional_tests/balanced_consumer_groups/tests/: common.py  test_consumer_groups.py  test_faulty_consumer.py
kafka/functional_tests/integrational_tests/: static_config.yaml
kafka/functional_tests/integrational_tests/tests/: common.py  test_consume_produced_messages.py  test_messages_consume.py  test_messages_send.py  utils.py
kafka/include/userver/kafka/: consumer_scope.hpp  exceptions.hpp  offset_range.hpp
kafka/include/userver/kafka/impl/: consumer.hpp
kafka/src/kafka/: consumer_component.cpp  consumer_scope.cpp  exceptions.cpp  producer.cpp
kafka/src/kafka/impl/: broker_secrets.cpp  configuration.cpp  consumer.cpp  consumer_impl.cpp  consumer_impl.hpp  holders.cpp  holders_aliases.hpp  producer_impl.cpp  producer_impl.hpp
kafka/tests/: consumer_kafkatest.cpp  producer_kafkatest.cpp
kafka/utest/src/kafka/utest/: kafka_fixture.cpp
libraries/: CMakeLists.txt
libraries/easy/: CMakeLists.txt
libraries/easy/include/userver/: easy.hpp
libraries/easy/samples/: CMakeLists.txt
libraries/easy/samples/0_hello_world/: CMakeLists.txt  main.cpp
libraries/easy/samples/0_hello_world/testsuite/: test_basic.py
libraries/easy/samples/1_hi/: CMakeLists.txt  main.cpp
libraries/easy/samples/1_hi/testsuite/: conftest.py  test_basic.py
libraries/easy/samples/2_key_value/: CMakeLists.txt  main.cpp
libraries/easy/samples/2_key_value/testsuite/: conftest.py  test_basic.py
libraries/easy/samples/3_json/: CMakeLists.txt  main.cpp
libraries/easy/samples/3_json/testsuite/: conftest.py  test_basic.py
libraries/easy/samples/4_custom_dependency/: CMakeLists.txt  main.cpp
libraries/easy/samples/4_custom_dependency/testsuite/: conftest.py  test_basic.py
libraries/easy/samples/5_pg_service_template/: CMakeLists.txt
libraries/easy/samples/5_pg_service_template/src/: main.cpp
libraries/easy/samples/6_pg_service_template_no_http_with/: CMakeLists.txt
libraries/easy/src/: easy.cpp
libraries/grpc-reflection/: CMakeLists.txt  __module_deps__.yaml  library.yaml
libraries/grpc-reflection/functional_tests/: CMakeLists.txt
libraries/grpc-reflection/functional_tests/golden_path/: CMakeLists.txt  grpc_reflection_service.cpp  static_config.yaml
libraries/grpc-reflection/src/grpc-reflection/: proto_server_reflection.cpp  proto_server_reflection.hpp  reflection_service_component.cpp
libraries/s3api/: CMakeLists.txt  library.yaml  ya.make  ya.make.ext
libraries/s3api/src/s3api/: s3_connection.cpp  s3_connection.hpp  s3api_methods.cpp  s3api_methods.hpp  s3api_methods_test.cpp
libraries/s3api/tests/: ya.make
libraries/s3api/utest/: CMakeLists.txt  ya.make
libraries/s3api/utest/src/: client_gmock.cpp
mysql/: CMakeLists.txt
mysql/functional_tests/basic_chaos/: CMakeLists.txt
samples/chaotic_openapi_service/: CMakeLists.txt  main.cpp  static_config.yaml
samples/chaotic_openapi_service/clients/: test.yaml
samples/embedded_files/: CMakeLists.txt  main.cpp  static_config.yaml
samples/embedded_files/testsuite/: test_hello.py
samples/postgres_service/: CMakeLists.txt  create_table.sql  postgres_service.cpp
samples/postgres_service/tests/: conftest.py  test_postgres.py
samples/s3api/: CMakeLists.txt  main.cpp
samples/s3api/src/: s3api_client.cpp  s3api_client.hpp
samples/s3api/unittests/: client_test.cpp
scripts/gdb/tests/: CMakeLists.txt  gen_gdb_printers_tests.py  test_printers.py
scripts/gdb/tests/src/: ya.make
scripts/gdb/tests/src/formats/: ya.make
tools/: CMakeLists.txt  Readme.md
tools/congestion-control-emulator/: CMakeLists.txt
tools/dns-resolver/: CMakeLists.txt
tools/engine-perf/: CMakeLists.txt
tools/http-client-perf/: CMakeLists.txt
tools/netcat/: CMakeLists.txt
(+1067 files in other folders)
